tests/errors/regex-bad-count-modifier/main.pa
# A `{min,max}` repetition with max < min.
def main = `a{2,1}`
